--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl extension Chess-Position
+Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
     - initial version
